Hot fix for section answer type box in form. Override jquery overflow bug

--- a/app/assets/stylesheets/modules.scss
+++ b/app/assets/stylesheets/modules.scss
@@ -818,3 +818,5 @@ div.ui-dynatree-container {
 .ui-state-hover .ui-icon {
   background-image: image-url("flick/ui-icons_0073ea_256x240.png");
 }
+
+li#s_answer_type { overflow: visible !important; }
